[gd_scene load_steps=13 format=3 uid="uid://u00fkf2rxxe"]

[ext_resource type="Texture2D" uid="uid://xdsx0by4ok4k" path="res://game_tscn/chapter1/level_2/都市灰.png" id="1_0y2fd"]
[ext_resource type="PackedScene" uid="uid://b23pgf5mo54qp" path="res://npc_scences/player.tscn" id="1_h2urd"]
[ext_resource type="Script" path="res://Scences_script/pause_menu.gd" id="2_xlwv8"]
[ext_resource type="Theme" uid="uid://3d1vsjlnhej3" path="res://GUI/pause_theme.tres" id="3_65dfu"]
[ext_resource type="Texture2D" uid="uid://bcxbfcq20g4jr" path="res://GUI/use/mr/button_one.png" id="4_1wsty"]
[ext_resource type="Texture2D" uid="uid://ctsgn38vyss2t" path="res://GUI/use/an/button_one_an.png" id="5_d2mrc"]
[ext_resource type="Texture2D" uid="uid://dr25v7bixfq2v" path="res://GUI/use/xuan/button_one_xuan.png" id="6_7s7y2"]
[ext_resource type="Texture2D" uid="uid://dp1yjesp4khly" path="res://暂停.png" id="7_ti6sb"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_es6vd"]
distance = -328.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_1e5eu"]
distance = -5517.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_c5uef"]
distance = -53.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_63asd"]

[node name="Node2D" type="Node2D"]

[node name="都市灰" type="Sprite2D" parent="."]
position = Vector2(2730, -1048)
texture = ExtResource("1_0y2fd")
metadata/_edit_lock_ = true

[node name="player" parent="." instance=ExtResource("1_h2urd")]
position = Vector2(1, 4)

[node name="Camera2D" type="Camera2D" parent="player"]
position = Vector2(1, 3)
offset = Vector2(0, -9.2)
zoom = Vector2(0.625, 0.625)

[node name="PauseUI" type="CanvasLayer" parent="." node_paths=PackedStringArray("pause_panel")]
process_mode = 3
script = ExtResource("2_xlwv8")
pause_panel = NodePath("Control/PausePanel")

[node name="Control" type="Control" parent="PauseUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_65dfu")
metadata/_edit_lock_ = true

[node name="PauseButton" type="TextureButton" parent="PauseUI/Control"]
visible = false
layout_mode = 1
offset_left = 1638.0
offset_right = 4119.0
offset_bottom = 1098.0
scale = Vector2(0.113594, 0.113594)
texture_normal = ExtResource("4_1wsty")
texture_pressed = ExtResource("5_d2mrc")
texture_hover = ExtResource("6_7s7y2")

[node name="PausePanel" type="Panel" parent="PauseUI/Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="暂停" type="Sprite2D" parent="PauseUI/Control/PausePanel"]
position = Vector2(411, 170)
scale = Vector2(0.644366, 0.644366)
texture = ExtResource("7_ti6sb")

[node name="ResumeButton" type="Button" parent="PauseUI/Control/PausePanel"]
layout_mode = 0
offset_left = 97.0
offset_top = 364.0
offset_right = 427.0
offset_bottom = 514.0
text = "继续游戏"

[node name="QuitButton" type="Button" parent="PauseUI/Control/PausePanel"]
layout_mode = 0
offset_left = 88.0
offset_top = 554.0
offset_right = 414.0
offset_bottom = 706.0
text = "退出游戏"

[node name="Boundary" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="big" type="Node2D" parent="Boundary"]

[node name="up" type="StaticBody2D" parent="Boundary/big"]
position = Vector2(-1105, -3076)

[node name="CollisionShape2D1" type="CollisionShape2D" parent="Boundary/big/up"]
position = Vector2(1107, 3305)
rotation = 3.14159
shape = SubResource("WorldBoundaryShape2D_es6vd")

[node name="right" type="StaticBody2D" parent="Boundary/big"]
position = Vector2(369, 29)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Boundary/big/right"]
position = Vector2(-365, 197)
rotation = -1.5708
shape = SubResource("WorldBoundaryShape2D_1e5eu")

[node name="left" type="StaticBody2D" parent="Boundary/big"]
position = Vector2(-2349, -1240)

[node name="4" type="CollisionShape2D" parent="Boundary/big/left"]
position = Vector2(2353, 1466)
rotation = 1.5708
shape = SubResource("WorldBoundaryShape2D_c5uef")

[node name="down" type="StaticBody2D" parent="Boundary/big"]
position = Vector2(-759, 364)

[node name="3" type="CollisionShape2D" parent="Boundary/big/down"]
position = Vector2(763, -138)
shape = SubResource("WorldBoundaryShape2D_63asd")

[connection signal="pressed" from="PauseUI/Control/PauseButton" to="PauseUI" method="pause"]
[connection signal="pressed" from="PauseUI/Control/PausePanel/ResumeButton" to="PauseUI" method="unpause"]
[connection signal="pressed" from="PauseUI/Control/PausePanel/QuitButton" to="PauseUI" method="quit_game"]
